Hero: menu added, fixed z-index problem global.css - button styles Header: paddings Added About.tsx in components and page.tsx

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,10 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
+
+@layer components {
+  .heroButton {
+    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40  hover:text-[#F7AB0A]/40
+  }
+}
+
